# vocal_pitch

./: LICENSE  README.md  pyproject.toml
src/vocal_pitch/: __init__.py  analysis.py  audio.py  lyrics.py  models.py  pitch.py  separation.py  transcript.py
tests/: test_analysis.py  test_audio.py  test_lyrics.py  test_pitch.py  test_separation.py
