[project]
name = "vocal-pitch"
version = "0.1.0"
description = "Extract sung pitch per word from solo vocal audio"
readme = "README.md"
authors = [
    { name = "singularitti", email = "singularitti@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "numpy>=2.0.0",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
transcribe = [
    "faster-whisper>=1.1.0",
]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
